site expense reprt changes added

--- a/hiworth_construction/report/site_expense_report.xml
+++ b/hiworth_construction/report/site_expense_report.xml
@@ -147,8 +147,10 @@
 
                                     </td>
                                     <td></td>
+                                    <td></td>
+                                    <td></td>
                                     <td>
-                                        <span>TOTAL</span>
+                                        <strong><span>TOTAL</span></strong>
                                     </td>
                                     <td col="3">
                                         <strong>
